--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^3.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/nunito-sans": "^5.0.12",
     "@heroicons/react": "^2.0.18",
     "@mui/material": "^5.15.15",
     "@testing-library/jest-dom": "^5.16.5",
